<resources>
    <!-- App title -->
    <string name="app_name">Cook It</string>

    <!-- Menu titles -->
    <string name="btnHome">Inicio</string>
    <string name="btnSearch">Buscar</string>
    <string name="btnAccount">Cuenta</string>

    <!-- Login fragment -->
    <string name="loginHeader">¿Listo para\nCocinar?</string>
    <string name="usrEmail">Usuario</string>
    <string name="userPassword">Contraseña</string>
    <string name="btnLogin">Iniciar Sesión</string>
    <string name="btnSignUp">¿Eres nuevo?\nRegístrate</string>
    <string name="recoverPassword">¿Olvidaste tu contraseña?</string>
    <string name="imgContentDescLogin">Imagen de perfil genérica</string>

    <!-- Sign Up fragment -->
    <string name="msg">Estás a punto de\ncompartir tus recetas, sólo\nnecesitamos algunos datos.</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="userName">Nombre de usuario</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirmar contraseña</string>
    <string name="signUp">Registrarse</string>
    <string name="contentDesc">Sign-up profile image</string>

    <!-- Account -->
    <string name="addDesc">Botón de agregar amigo</string>
    <string name="removeDesc">Botón de borrar amigo</string>
    <string name="loginAccountMessage">Inicia Sesión para\n ver tus receta</string>
    <string name="networkMessage">Ocurrió un error, intenta otra vez</string>
    <string name="reload">Reintentar</string>
    <string name="addButtonDesc">Add recipe button</string>
    <string name="friendsButtonDesc">Friends button</string>
    <string name="favouritesButtonDesc">Favourite recipes button</string>
    <string name="empty">No hay recetas aquí,\ncrea una!</string>

    <!-- Home -->
    <string name="homeTitle">Recetas Populares</string>
    <string name="loginDesc">Botón para iniciar sesión</string>
    <string name="floatingbuttonDesc">Botón para crear recetas</string>

    <!-- Account Settings -->
    <string name="phoneNumber">Teléfono</string>
    <string name="settingsIconDesc">Settings button</string>
    <string name="settingsName">Nombre</string>
    <string name="updateButton">Actualizar</string>
    <string name="profilePhotoDesc">Foto de perfil</string>
    <string name="logout">Salir</string>

    <!-- Search -->
    <string name="foodSearchDesc">Botón para buscar comida</string>
    <string name="peopleSearchDesc">Botón para buscar personas</string>

    <!-- Search User -->
    <string name="fullName">%1s %2s</string>

    <!-- New Recipe -->
    <string name="titleHint">Título de la receta</string>
    <string name="ingredientsList">Ingredientes</string>
    <string name="add">+</string>
    <string name="remove">-</string>
    <string name="processList">Preparación</string>
    <string name="btnCreate">Crear Receta</string>
    <string name="recipeImgDesc">Imagen de la receta</string>

    <!-- Favourites fragment -->
    <string name="favouritesFragmentTitle">Tus recetas favoritas!</string>

    <!-- Recipe Detail -->
    <string name="btnDelete">Borrar</string>
    <string name="btnUpdate">Editar</string>

    <!-- Search Food -->
    <string name="filterIcon">Filter icon</string>

    <!-- Category Element -->
    <string name="iconDesc">Ícono de la categoría</string>

    <!-- Recipe Element -->
    <string name="favDesc">Ícono de favorito</string>
    <string name="commentDesc">Ícono de comentario</string>
    <string name="shareDesc">Ícono de compartir</string>
</resources>