<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AccountSettingsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/photoDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/profilePhoto"/>

    <ImageView
        android:id="@+id/profilePhoto"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/ic_account"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintTop_toTopOf="@id/topGuideline"
        android:contentDescription="@string/profilePhotoDesc"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settingsNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toTopOf="@id/photoDiv">
        <EditText
            android:id="@+id/settingsName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/settingsName"
            android:drawableEnd="@drawable/ic_edit"
            android:autofillHints=""
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settingsUsernameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/settingsNameLayout">
        <EditText
            android:id="@+id/settingsUsername"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/userName"
            android:drawableEnd="@drawable/ic_edit"
            android:autofillHints=""
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settingsPasswordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/settingsUsernameLayout">
        <EditText
            android:id="@+id/settingsPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/userPassword"
            android:drawableEnd="@drawable/ic_edit"
            android:autofillHints=""
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateButton"
        app:layout_constraintBottom_toTopOf="@id/logoutBtn"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/settingsPasswordLayout"
        app:layout_constraintVertical_bias="0.496" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:icon="@drawable/ic_logout"
        android:backgroundTint="@color/removeIngredient"
        app:layout_constraintTop_toBottomOf="@id/updateButton"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"/>

</androidx.constraintlayout.widget.ConstraintLayout>