<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragments.LoginFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.92" />

        <TextView
            android:id="@+id/loginHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/loginHeader"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@id/loginImage"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toTopOf="@id/topGuideline" />

        <ImageView
            android:id="@+id/loginImage"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_account"
            android:contentDescription="@string/imgContentDescLogin"
            app:layout_constraintBottom_toTopOf="@id/usrEtLayout"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/loginHeader" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usrEtLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/usrEmail"
            android:inputType="text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintBottom_toTopOf="@id/passwordEtLayout"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/loginImage" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usrEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEtLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:hint="@string/userPassword"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintBottom_toTopOf="@id/recoverPassword"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/usrEtLayout" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/recoverPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recoverPassword"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/passwordEtLayout" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/recoverPassword"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintBottom_toTopOf="@id/divider" />

        <View
            android:id="@+id/divider"
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginBottom="23dp"
            android:layout_marginVertical="15dp"
            app:layout_goneMarginBottom="25dp"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintBottom_toTopOf="@id/btnSignUp"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSignUp"
            android:layout_marginBottom="25dp"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toTopOf="@id/divider"
            app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>