<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recipeImage"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:contentDescription="@string/recipeImgDesc"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ic_cookit_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_3"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/cardRecipeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/titleHint"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="@color/white" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnFavourite"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:contentDescription="@string/favDesc"
                        android:src="@drawable/ic_star"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/btnComment"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/blue_1" />

                    <ImageButton
                        android:id="@+id/btnComment"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@null"
                        android:contentDescription="@string/commentDesc"
                        android:src="@drawable/ic_comment"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/btnShare"
                        app:layout_constraintStart_toEndOf="@id/btnFavourite"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/blue_1" />

                    <ImageButton
                        android:id="@+id/btnShare"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:contentDescription="@string/shareDesc"
                        android:src="@drawable/ic_share"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/btnComment"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/blue_1" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>