<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.fragments.SignUpFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.92" />

        <ImageView
            android:id="@+id/signUpLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_account"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/contentDesc"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toTopOf="@id/topGuideline"
            app:layout_constraintBottom_toTopOf="@id/signUpMsg" />

        <TextView
            android:id="@+id/signUpMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/signUpLogo"
            app:layout_constraintBottom_toTopOf="@id/nameLayout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/signUpMsg"
            app:layout_constraintBottom_toTopOf="@id/lastnameLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/name"
                android:layout_marginTop="10dp"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastnameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/nameLayout"
            app:layout_constraintBottom_toTopOf="@id/userNameLayout"
            android:autofillHints="">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/lastname" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/lastnameLayout"
            app:layout_constraintBottom_toTopOf="@id/emailLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/userName"
                android:inputType="text"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_account"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/userNameLayout"
            app:layout_constraintBottom_toTopOf="@id/passwordLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/emailLayout"
            app:layout_constraintBottom_toTopOf="@id/confirmPassword">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/userPassword"
                android:layout_marginVertical="10dp"
                android:inputType="textPassword"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintBottom_toTopOf="@id/btnSend"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/confirmPassword"
            app:layout_constraintBottom_toTopOf="@id/googleSignUp"/>

        <Button
            android:id="@+id/googleSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/googleSignUp"
            android:layout_marginBottom="25dp"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/btnSend"
            app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>